[package]
name = "godot_tokio"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multi-thread"]
single-thread = ["tokio/rt"]
multi-thread = ["tokio/rt-multi-thread"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = "0.2.0"
tokio = "1.41.1"
