[package]
name = "godot_tokio"
version = "0.1.5"
edition = "2021"
license = "MIT"
keywords = ["godot", "gdext", "gdextention", "async", "tokio"]
repository = "https://github.com/2-3-5-41/godot_tokio"
readme = "README.md"
description = "The tokio-async runtime wrapped in a gdextention object to be used as an engine singleton in your gdext project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multi-thread"]
single-thread = ["tokio/rt"]
multi-thread = ["tokio/rt-multi-thread"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
godot = "0.2.0"
tokio = "1.41.1"
